--- a/src/app/retailer-permit-print/retailer-permit-print.component.css
+++ b/src/app/retailer-permit-print/retailer-permit-print.component.css
@@ -140,7 +140,7 @@
 }
 
 .signature {
-  margin-top: 25px;
+  margin-top: 20px;
   text-align: right;
   line-height: 1;
 }
@@ -165,7 +165,7 @@
   justify-content: space-between;
   align-items: flex-start;
   margin-top: 20px;
-  gap: 10mm;
+  gap: 2mm;
 }
 
 .or-section {
@@ -180,12 +180,12 @@
 }
 
 .notes p {
-  margin: 0 0 8px 0;
-  font-size: 10pt;
+  margin: 0 0 5px 0;
+  font-size: 5pt;
 }
 
 .notes strong {
-  font-size: 10.5pt; /* Slightly larger for emphasis */
+  font-size: 7pt; /* Slightly larger for emphasis */
   font-weight: bold;
 }
 
@@ -195,7 +195,7 @@
 }
 
 .notes li {
-  font-size: 9.5pt; /* Smallest for list items */
+  font-size: 7pt; /* Smallest for list items */
   margin-bottom: 4px;
   text-align: justify;
 }
@@ -212,6 +212,16 @@
   margin-left: 5px;
 }
 
+.or-left {
+  font-size: 10pt;
+  line-height: 1.3;
+}
+
+.or-left strong {
+  font-size: 10.5pt;
+  font-weight: bold;
+}
+
 /* Print optimization */
 @media print {
   .notes {
@@ -220,6 +230,10 @@
   
   .notes li {
     font-size: 8.5pt;
+  }
+
+  .or-left {
+    font-size: 9pt;
   }
 }
 
